# Arcane-Journey

./: .gitignore  Arcane Journey.sln  CMakeLists.txt  Dockerfile  README.md  folder_structure.txt  main.cpp  rebuild.sh  reorganize.sh
.github/workflows/: ci.yml
Arcane Journey/: Arcane Journey.vcxproj  Arcane Journey.vcxproj.filters  Board.cpp  Board.h  ConvertSketch.cpp  Enemies.cpp  Enemies.h  Goomba.cpp  KnightControl.cpp  KnightControl.h  Koopa.cpp  LoginPage.cpp  LoginPage.h  Main.cpp  MainMenu.cpp  MainMenu.h  MapManager.cpp  Mario.cpp  Mario.hpp  ModeSelect.cpp  ModeSelect.h  Mushroom.cpp  OpenAnim.cpp  OpenAnim.h  PlayerEnemyInteraction.cpp  PlayerEnemyInteraction.h  Playerselect.cpp  Playerselect.h  RCa09896  RangerControl.cpp  RangerControl.h  SorcererControl.cpp  SorcererControl.h  SoundEff.cpp  SoundEff.h  character.cpp  character.h  game.cpp  game.h  map.cpp  (+3 more)
Arcane Journey/Texture/03CharSel/: Knight_hover.psd
Arcane Journey/Textures/Enemies/Enemy/: Details.txt
Arcane Journey/Textures/Players/: Description.txt
Arcane Journey/Textures/Players/2/: Description.txt
archive/: Animation.cpp  Animation.hpp  Arcane Journey.vcxproj  DrawMap.cpp  Enemy.cpp  Main.cpp  MapCollision.cpp  resource.h  stdafx.cpp  stdafx.h
assets/levels/: Level.txt
src/: Card.cpp  Card.h  CardFactory.cpp  CardFactory.h  Constants.hpp  DeckManager.cpp  DeckManager.h  Game.cpp  Game.h  Player.cpp  Player.h  RunManager.cpp  RunManager.hpp  main.cpp
src/core/: Camera.cpp  Camera.hpp  DiscoveryTracker.cpp  Player.cpp  Player.hpp  player.cpp  player.hpp  world.cpp  world.hpp
src/game/: battle.cpp  battle.hpp  player.cpp  player.hpp  shop.cpp  shop.hpp  unit.cpp  unit.hpp  unitpool.cpp  unitpool.hpp
src/level/: BouncePad.cpp  BouncePad.hpp  Bouncepad.cpp  Bouncepad.hpp  Climbable.cpp  Climbable.hpp  CrumblingPlatform.cpp  CrumblingPlatform.hpp  Crumblingplatform.cpp  Crumblingplatform.hpp  DisappearingPlatform.cpp  DisappearingPlatform.hpp  Disappearingplatform.cpp  Disappearingplatform.hpp  LevelData.cpp  LevelData.hpp  Leveldata.cpp  Leveldata.hpp  MovingPlatform.cpp  MovingPlatform.hpp  Movingplatform.cpp  Movingplatform.hpp  TeleportBlock.cpp  TeleportBlock.hpp  Teleportblock.cpp  Teleportblock.hpp  TileLoader.cpp  TileLoader.hpp  Trapdoor.cpp  Trapdoor.hpp
src/scenes/: scene.hpp  scene_manager.hpp
src/systems/: Achievement.hpp  AchievementManager.cpp  AchievementManager.hpp  Artifact.hpp  ArtifactManager.cpp  ArtifactManager.hpp  DiscoveryTracker.cpp  DiscoveryTracker.hpp  Juice.cpp  Juice.hpp  SaveData.cpp  SaveData.hpp
src/ui/: Coin.hpp  CoinManager.cpp  CoinManager.hpp  HubUI.cpp  HubUI.hpp  Npc.cpp  Npc.hpp  PlatformDemo.cpp  PlatformDemo.hpp  Savedata.cpp  SectionAnnouncer.cpp  SplashScreen.cpp  SplashScreen.hpp  coinManager.cpp  coinManager.hpp  cosmeticsManager.cpp  cosmeticsManager.hpp  sectionAnnouncer.cpp  sectionAnnouncer.hpp
